[package]
name = "derive_inherent_builder"
version = "0.1.0"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]
edition = "2018"

description = "Allows the declaration of builder methods on normal structs."

documentation = "https://docs.rs/derive_inherent_builder/0.1.0/derive_inherent_builder/"
repository = "https://github.com/Lymia/derive_inherent_builder"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
nightly = ["proc-macro2/nightly", "darling/diagnostics"]

[dependencies]
darling = "0.10"
syn = "1"
quote = "1"
proc-macro2 = "1"
