[package]
name = "derive_setters"
version = "0.1.8"
authors = ["Alissa Rao <aura@aura.moe>"]
edition = "2018"

description = "Rust macro to automatically generates setter methods for a struct's fields."

repository = "https://github.com/Lymia/derive_setters"
readme = "README.md"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
nightly = ["proc-macro2/nightly"]

[dependencies]
darling = "0.20"
syn = "2"
quote = "1"
proc-macro2 = "1"
